--- a/Eventhings/Web.config
+++ b/Eventhings/Web.config
@@ -4,11 +4,19 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms name=".eventiform" loginUrl="login.html" protection="All" path="/" slidingExpiration="true">
+			  <credentials>
+				  <user name="admin" password="p@ssw0rd"/>
+			  </credentials>
+		  </forms>
+	  </authentication>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
@@ -22,25 +30,14 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
-
-	<!--<entityFramework>
-		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
-		<providers>
-			<provider invariantName="MySql.Data.MySqlClient"
-				type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework"/>
-			<provider invariantName="System.Data.SqlClient"
-				type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-		</providers>
-	</entityFramework>-->
-
-	<system.data>
-		<DbProviderFactories>
-			<remove invariant="MySql.Data.MySqlClient" />
-			<add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.22.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-		</DbProviderFactories>
-	</system.data>
-	
+  <system.data>
+  </system.data>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -49,4 +46,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="EventiConnectionString" connectionString="data source=imt;initial catalog=deveventhings;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
