--- a/Eventhings/Web.config
+++ b/Eventhings/Web.config
@@ -11,10 +11,10 @@
   </configSections>
   <system.web>
 	  <authentication mode="Forms">
-		  <forms name=".eventiform" loginUrl="login.html" protection="All" path="/" slidingExpiration="true">
-			  <credentials>
+		  <forms name=".eventiform" loginUrl="login.html" defaultUrl="~/admin/dashboard.aspx" cookieless="UseCookies" protection="All" path="/" slidingExpiration="true">
+			  <!--<credentials>
 				  <user name="admin" password="p@ssw0rd"/>
-			  </credentials>
+			  </credentials>-->
 		  </forms>
 	  </authentication>
     <compilation debug="true" targetFramework="4.8" />
@@ -47,6 +47,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="EventiConnectionString" connectionString="data source=imt;initial catalog=deveventhings;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="EventiConnectionString" connectionString="data source=imt;initial catalog=deveventhings;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+
+	  <add name="EventiConnectionString" connectionString="Server=tcp:eventi.database.windows.net,1433;Initial Catalog=eventi_db;Persist Security Info=False;User ID=admin_eventi;Password=p@$$w0rd1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
