--- a/Eventhings/Web.config
+++ b/Eventhings/Web.config
@@ -25,7 +25,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.1" />
     <httpRuntime targetFramework="4.7.1" />
+    <trace enabled="true" requestLimit="20" localOnly="true" />    
   </system.web>
+  
   <appSettings>
     <add key="apppassword" value="ijfejjfddvkmmysu" />
     <add key="qr-scan-base-url" value="https://www.eventiix.com/clients/auth/codelink.aspx" />
@@ -40,11 +42,11 @@
   </system.webServer>-->
   <connectionStrings>
     
-	  <!--<add name="YEventhingsDbContext" connectionString="data source=imt;initial catalog=deveventhings;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
+	  
     
-	  <add name="SomeeConnEventhingsDbContext" connectionString="workstation id=deveventhings.mssql.somee.com;packet size=4096;user id=afaruk_SQLLogin_1;pwd=k4pu2za6ib;data source=deveventhings.mssql.somee.com;persist security info=False;initial catalog=deveventhings;App=EntityFramework" providerName="System.Data.SqlClient" />
-    
-	  <add name="LocalConnEventhingsDbContext" connectionString="data source=localhost;initial catalog=deveventhings;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+	  <!--<add name="LocalConnEventhingsDbContext" connectionString="data source=localhost;initial catalog=deveventhings;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <!--<add name="LocalConnEventhingsDbContext" connectionString="Data Source=wdb4.my-hosting-panel.com;Initial Catalog=eventiix_prodeventiix;Integrated Security=False;User ID=eventiix_savixy;Password=Jekidero*1234;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>-->
+    <add name="LocalConnEventhingsDbContext" connectionString="Data Source=localhost;Initial Catalog=deveventhings;Integrated Security=False;User ID=sa;Password=Schizophrenic@0911;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>
     
 	  <add name="AzureConnEventhingsDbContext" connectionString="Server=tcp:eventi.database.windows.net,1433;Initial Catalog=eventi_db;Persist Security Info=False;User ID=admin_eventi;Password=P@$$w0rd1;" providerName="System.Data.SqlClient" />
 	  
