created and creditmanagement

--- a/Eventhings/Web.config
+++ b/Eventhings/Web.config
@@ -42,16 +42,14 @@
   </system.webServer>-->
   <connectionStrings>
     
-	  
-    
-	  <!--<add name="LocalConnEventhingsDbContext" connectionString="data source=localhost;initial catalog=deveventhings;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <!--<add name="LocalConnEventhingsDbContext" connectionString="Data Source=wdb4.my-hosting-panel.com;Initial Catalog=eventiix_prodeventiix;Integrated Security=False;User ID=eventiix_savixy;Password=Jekidero*1234;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>-->
-    <add name="LocalConnEventhingsDbContext" connectionString="Data Source=localhost;Initial Catalog=deveventhings;Integrated Security=False;User ID=sa;Password=Schizophrenic@0911;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>
-    
-	  <add name="AzureConnEventhingsDbContext" connectionString="Server=tcp:eventi.database.windows.net,1433;Initial Catalog=eventi_db;Persist Security Info=False;User ID=admin_eventi;Password=P@$$w0rd1;" providerName="System.Data.SqlClient" />
+    <!--<add name="LocalConnEventhingsDbContext" connectionString="Data Source=localhost;Initial Catalog=deveventhings;Integrated Security=False;User ID=sa;Password=Schizophrenic@0911;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>-->
+
+    <add name="LocalConnEventhingsDbContext" connectionString="Data Source=wdb4.my-hosting-panel.com;Initial Catalog=eventiix_prod_eventiix;Integrated Security=False;User ID=eventiix_sa;Password=Jekidero*1234;Connect Timeout=15;Encrypt=False;Packet Size=4096"  providerName="System.Data.SqlClient"/>
 	  
 	  <add name="MochaConnEventhingsDbContext" connectionString="Data Source=wdb4.my-hosting-panel.com;Initial Catalog=eventiix_prod_eventiix;Integrated Security=False;User ID=eventiix_sa;Password=Jekidero*1234;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />
-  <add name="EventhingsDbContexts" connectionString="data source=localhost;initial catalog=deveventhings;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="EventhingsDbContexts" connectionString="data source=localhost;initial catalog=deveventhings;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
